Fixes UI problem when tag name is too big

--- a/client/src/core-components/tag-selector.scss
+++ b/client/src/core-components/tag-selector.scss
@@ -30,8 +30,8 @@
 
     &-square {
       display: inline-block;
-      height: 15px;
-      width: 15px;
+      min-height: 15px;
+      min-width: 15px;
       border-radius: 4px;
     }
 
